[package]
authors = ["NLnet Labs <routing-team@nlnetlabs.nl>"]
categories = ["network-programming"]
description = "A library for storing and retrieving IP Prefixes"
documentation = "https://docs.rs/rotonda/"
edition = "2021"
homepage = "https://nlnetlabs.nl/projects/routing/rotonda/"
keywords = ["routing", "bgp"]
license = "BSD-3-Clause"
name = "rotonda-store"
repository = "https://github.com/NLnetLabs/rotonda-store/"
version = "0.4.0-rc0"
rust-version = "1.71"

[dependencies]
crossbeam-epoch = "^0.9"
crossbeam-utils = "^0.8"
#flurry 		= "0.5.1"
inetnum = "0.1.0"
log             = "^0.4"
roaring 	= "0.10.3"
# rotonda-macros  = { version = "0.4.0-rc0" }
# rotonda-macros  = { path = "../rotonda-macros" }
rotonda-macros  = { git  = "https://github.com/nlnetlabs/rotonda-macros", branch = "main" }
routecore       = { version = "0.5.0-rc1", features = ["bgp", "bmp", "fsm", "serde"] }

ansi_term   = { version = "0.12", optional = true }
csv         = { version = "1", optional = true }
rustyline   = { version = "13", optional = true }
parking_lot_core = "0.9.10"

[dev-dependencies]
csv         = { version = "1" }
env_logger  = { version = "0.10" }
rand        = "^0.8"

[features]
cli = ["ansi_term", "rustyline", "csv"]
default = []

[[bin]]
name = "cli"
required-features = ["cli"]
