[package]
categories = ["network-programming"]
description = "A library for storing and retrieving IP Prefixes"
documentation = "https://docs.rs/rotonda/"
homepage = "https://nlnetlabs.nl/projects/routing/rotonda/"
keywords = ["routing", "bgp"]
name = "rotonda-store"
repository = "https://github.com/NLnetLabs/rotonda-store/"
version.workspace = true
edition.workspace = true
authors.workspace = true
rust-version.workspace = true
license.workspace = true

[workspace]
members   = ["proc_macros"]

[workspace.package]
version = "0.4.1"
edition = "2021"
authors = ["NLnet Labs <routing-team@nlnetlabs.nl>"]
license = "BSD-3-Clause"
rust-version = "1.80"

[dependencies]
crossbeam-epoch = "^0.9"
crossbeam-utils = "^0.8"

inetnum   = "0.1"
log       = "^0.4"
roaring 	= "0.10.3"
rotonda-macros = { path = "proc_macros", version = "0.4.0" }
routecore       = { version = "0.5", features = ["bgp", "bmp", "fsm", "serde"] }

ansi_term   = { version = "0.12", optional = true }
csv         = { version = "1", optional = true }
rustyline   = { version = "13", optional = true }
parking_lot_core = "0.9.10"

[dev-dependencies]
csv         = { version = "1" }
env_logger  = { version = "0.10" }
rand        = "^0.8"

[features]
cli = ["ansi_term", "rustyline", "csv"]
default = []

[[bin]]
name = "cli"
required-features = ["cli"]
