[package]
categories = ["network-programming"]
description = "A library for storing and retrieving IP Prefixes"
documentation = "https://docs.rs/rotonda/"
homepage = "https://nlnetlabs.nl/projects/routing/rotonda/"
keywords = ["routing", "bgp"]
name = "rotonda-store"
repository = "https://github.com/NLnetLabs/rotonda-store/"
version.workspace = true
edition.workspace = true
authors.workspace = true
rust-version.workspace = true
license.workspace = true

[workspace.package]
version = "0.5.0"
edition = "2021"
authors = ["NLnet Labs <routing-team@nlnetlabs.nl>"]
license = "BSD-3-Clause"
rust-version = "1.82"

[dependencies]
crossbeam-epoch = "^0.9"
crossbeam-utils = "^0.8"
parking_lot_core = "0.9.10"

inetnum   = "0.1"
log       = "^0.4"
roaring 	= "0.10.3"
routecore       = { version = "0.5.2", features = ["bgp", "bmp", "fsm", "serde", "mrt"] }
ansi_term   = { version = "0.12", optional = true }
csv         = { version = "1", optional = true }
rustyline   = { version = "15", optional = true }
clap        = { version = "4.4", optional = true, features = ["derive"] }
rayon = { version = "1.10", optional = true }
memmap2 = { version = "0.9", optional = true }
rand = { version = "0.9" }
lsm-tree = { version = "2.6.6" }
serde = "1.0.216"
serde_derive = "1.0.216"
serde_json = "1.0.133"
num-traits = "0.2.19"
zerocopy = { version = "0.8.17", features = ["derive"] }

[dev-dependencies]
csv         = { version = "1" }
env_logger  = { version = "0.11" }

[features]
cli = ["ansi_term", "rustyline", "csv"]
mrt = ["clap", "rayon"]
default = []

[[bin]]
name = "cli"
required-features = ["cli"]

[[bin]]
name = "load_mrt"
required-features = ["mrt"]
