[package]
name = "rotonda-macros"
categories = ["network-programming"]
description = "Procedural macros for the rotonda-store prefix store"
homepage = "https://nlnetlabs.nl/projects/routing/rotonda/"
repository = "https://github.com/NLnetLabs/rotonda-macros"
keywords = ["routing", "bgp"]
edition.workspace = true
version.workspace = true
authors.workspace = true
rust-version.workspace = true
license.workspace = true

[lib]
proc-macro = true

[dependencies]
syn = {version = "^2", features = ["proc-macro", "full", "parsing", "printing"] }
quote = "^1"
